Fixed spacing and alignment

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {
   text-shadow: 2px 2px 0px black;
 }
 
-body, input, button, textarea {
+input, button, textarea {
   font-family: "Lexend", sans-serif;
   font-size:20px;
   color: black;          
@@ -64,10 +64,13 @@ body, input, button, textarea {
   font-weight: bold;
 }
 
+#definition-container{
+  display:flex;
+}
 
 #get-definition {
   flex: 1;
-  margin-top: 8px;
+  margin-top: 12px;
   padding: 10px 16px;
   background: #F8629C;
   border: none;
@@ -75,7 +78,6 @@ body, input, button, textarea {
   cursor: pointer;
   font-weight: bold;
 }
-
 
 #definition-box {
   margin-top: 12px;
@@ -88,10 +90,9 @@ body, input, button, textarea {
   box-sizing: border-box;
 }
 
-
 #speak-definition {
   flex: 1;
-  margin-top: 6px;
+  margin-top: 12px;
   padding: 10px 16px;
   background: #F8629C;
   border: none;
